<resources>
    <string name="app_name">DINNER 4 YOU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_dinner_4_u">WELCOME TO DINNER 4 U</string>
    <string name="enter_your_email_address_here">Enter Your Email Address Here!</string>
    <string name="enter_your_password_here">Enter Your Password Here!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="keep_me_signed_in">Keep me signed in.</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="don_t_have_account">DON\'T HAVE ACCOUNT?</string>
    <string name="create_here">CREATE HERE!</string>
    <string name="reset_here">RESET HERE!</string>
    <string name="enter_new_password_here">Enter New Password Here!</string>
    <string name="enter_your_user_name_here">Enter Your User Name Here!</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="create">CREATE</string>
    <string name="vegetables">VEGETABLES</string>
    <string name="fruits">FRUITS</string>
    <string name="meats">MEATS</string>
    <string name="fish_and_seafoods">FISH AND SEAFOODS</string>
    <string name="grains_beans_and_nuts">GRAINS BEANS AND NUTS</string>
    <string name="dairies">DAIRIES</string>
    <string name="find_recipe">FIND RECIPE</string>
    <string name="select_ingredients">SELECT INGREDIENTS</string>
    <string name="added_items">ADDED ITEMS</string>
    <string name="profile">PROFILE</string>
    <string name="searchTitle">SEARCH</string>
    <string name="findRecipeTitle">FIND RECIPE</string>
    <string name="settings">SETTINGS</string>
    <string name="favorite_recipes">FAVORITE RECIPES</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset">RESET</string>
    <string name="show_full_recipe">Show Full Recipe</string>
    <string name="type_recipe_name">type recipe name</string>
    <string name="matching_recipes">MATCHING RECIPES</string>
    <string name="clear_all_selections">CLEAR ALL SELECTIONS</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="add_to_favorites_list">ADD FAVES</string>
    <string name="fav_recipes">FAVORITE RECIPES</string>
    <string name="signupheader">SIGN UP</string>
    <string name="findingredient">FIND INGREDIENT</string>
</resources>