<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.SignUpPage">
    <data>
        <variable
            name="viewModel"
            type="com.example.dinnerforyou.SignUpViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/signUpLayout"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="@color/secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/create_account"
                android:textColor="@color/primary"
                android:textSize="@dimen/headersize"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textStyle="normal"></TextView>
        </FrameLayout>

        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:hint="@string/enter_your_user_name_here"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@={viewModel.username}"
            android:textColorHint="#757575"
            android:autofillHints=""></EditText>

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:hint="@string/enter_your_email_address_here"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/usernameEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@={viewModel.email}"
            android:textColorHint="#757575"
            android:autofillHints=""></EditText>

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:hint="@string/enter_your_password_here"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/emailEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@={viewModel.password}"
            android:textColorHint="#757575"
            android:autofillHints=""></EditText>

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/passwordEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/padding"
            android:text="@string/create"></Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>