<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.RecipeDetailsPage">

    <data>

        <variable
            name="viewModel"
            type="com.example.dinnerforyou.RecipeDetailsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:measureAllChildren="true"
            android:paddingBottom="?attr/actionBarSize"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="@dimen/cardElevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/padding">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/padding"
                            android:layout_marginBottom="@dimen/padding"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/iconSize"
                                android:layout_height="@dimen/iconSize"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/padding"
                                android:background="@drawable/ingredient_icon"></ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/ingredients"
                                android:textColor="@color/primary"
                                android:textSize="@dimen/header2Size"></TextView>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/ingredients"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewStart"
                            android:textAllCaps="true"
                            android:textSize="@dimen/textSize"></TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="@dimen/cardElevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/padding">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/padding"
                            android:layout_marginBottom="@dimen/padding"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/iconSize"
                                android:layout_height="@dimen/iconSize"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/padding"
                                android:background="@drawable/instruction_icon"></ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/instructions"
                                android:textColor="@color/primary"
                                android:textSize="@dimen/header2Size"></TextView>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewStart"
                            android:textSize="@dimen/textSize"></TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/extended_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="16dp"
                    android:text="@string/add_to_favorites_list"
                    app:icon="@drawable/fav_icon" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>